2005-09-18  Sven Panne  <sven.panne@aedion.de>

	* src/al_mixer.c: Give other threads a chance to acquire the mixer
	lock.

	* configure.ac: Use AL_BUILD_LIBRARY instead of _OPENAL32LIB.

2005-09-02  Sven Panne  <sven.panne@aedion.de>

	* linux/Makefile.in: alctypes.h and altypes.h are dead, Jim...

2005-09-01  Sven Panne  <sven.panne@aedion.de>

	* linux/Makefile.in, linux/include/AL/alext.h
	linux/src/Makefile.in, linux/src/al_source.c,
	linux/src/extensions/al_ext_loki.h, linux/test/Makefile.in:
	Removed ALUT implementation from linux subtree. Note that
	currently the linux/test directory doesn't build without fiddling
	around with compiler/linker flags. But this doesn't really matter,
	as all tests and examples will reside below the "one and only"
	alut directory in the future, anyway.

	* linux/src/alut/alut_imaadpcm.c, linux/src/alut/alut_main.c,
	linux/src/alut/alut_msadpcm.c, linux/src/alut/alut_rawadpcm.c,
	linux/src/alut/alut_wav.c: Removed.

2005-08-22  Sven Panne  <sven.panne@aedion.de>

	* linux/Makefile.in, linux/include/AL/alext.h: Merged alexttypes.h
	into alext.h, cleaning up things a little bit and adding a few
	ALAPIENTRY.

	* linux/include/AL/alexttypes.h: Removed.

2005-08-21  Sven Panne  <sven.panne@aedion.de>

	* linux/config-osx.h, linux/configure.ac, linux/INSTALL,
	linux/Makefile.in, linux/src/al_able.c, linux/src/al_buffer.c,
	linux/src/alc/alc_context.c, linux/src/alc/alc_context.h,
	linux/src/alc/alc_device.c, linux/src/alc/alc_device.h,
	linux/src/alc/alc_error.c, linux/src/alc/alc_error.h,
	linux/src/alc/alc_speaker.c, linux/src/alc/alc_speaker.h,
	linux/src/al_doppler.c, linux/src/al_filter.c,
	linux/src/al_filter.h, linux/src/al_listen.c, linux/src/al_main.c,
	linux/src/al_mixer.c, linux/src/al_siteconfig.h,
	linux/src/al_source.c, linux/src/alut/alut_imaadpcm.c,
	linux/src/alut/alut_msadpcm.c, linux/src/alut/alut_rawadpcm.c,
	linux/src/alut/alut_wav.c, linux/src/arch/alsa/alsa.c,
	linux/src/arch/linux/lin_dsp.c,